Update Evaluation Metrics for Regression.ipynb

--- a/03 - Evaluation Metrics for Regression/Evaluation Metrics for Regression.ipynb
+++ b/03 - Evaluation Metrics for Regression/Evaluation Metrics for Regression.ipynb
@@ -1521,12 +1521,12 @@
    "metadata": {},
    "source": [
     "### Honorable Mentions ###\n",
-    "MSLE (Mean Squared Logarithmic Error)\n",
-    "RMSLE (Root Mean Squared Logarithmic Error)\n",
-    "Explained Variance Score\n",
-    "Symmetric MAPE\n",
-    "Huber Loss\n",
-    "AIC and BIC (Akaike and Bayes Information Criterion)"
+    "  - MSLE (Mean Squared Logarithmic Error)\n",
+    "  - RMSLE (Root Mean Squared Logarithmic Error)\n",
+    "  - Explained Variance Score\n",
+    "  - Symmetric MAPE\n",
+    "  - Huber Loss\n",
+    "  - AIC and BIC (Akaike and Bayes Information Criterion)"
    ]
   }
  ],
